feat: add search_word
